--- a/src/assets/scss/argon-dashboard/custom/_variables.scss
+++ b/src/assets/scss/argon-dashboard/custom/_variables.scss
@@ -44,6 +44,7 @@ $enable-print-styles:       true !default;
 // Color system
 
 $white:    #fff !default;
+$gray-light: #f6f5f5 !default;
 $gray-100: #f6f9fc !default;
 $gray-200: #e9ecef !default;
 $gray-300: #dee2e6 !default;
@@ -75,7 +76,7 @@ $pink:    #f3a4b5 !default;
 $red:     #f5365c !default;
 $orange:  #fb6340 !default;
 $yellow:  #ffd600 !default;
-$green:   #2dce89 !default;
+$green:   #19704d !default;
 $teal:    #11cdef !default;
 $cyan:    #2bffc6 !default;
 
@@ -95,13 +96,15 @@ $colors: map-merge((
   "gray":       $gray-600,
   "light":      $gray-400,
   "lighter":    $gray-200,
-  "gray-dark":  $gray-800
+  "gray-dark":  $gray-800,
+"gray-light":  $gray-light
 ), $colors);
 
 $default:       #172b4d !default;
 $primary:       #5e72e4 !default;
-$secondary:     #f7fafc !default;
+$secondary:     #b2ccbe !default;
 $success:       $green !default;
+$infog:          $gray-light !default;
 $info:          $teal !default;
 $warning:       $orange !default;
 $danger:        $red !default;
@@ -126,6 +129,7 @@ $theme-colors: map-merge((
   "secondary":    $secondary,
   "success":      $success,
   "info":         $info,
+  "infog":         $infog,
   "warning":      $warning,
   "danger":       $danger,
   "white":        $white,
